# randpw

./: Makefile.in  README  configure  configure.in  lyrics.txt  lyrics.wordlist  main.c  make_nomes_c.c  mkinstalldirs  mknomedat.c  nomes.c  nomes.h  randpw.c  randpw.h  randpw.rnd
